--- a/style.css
+++ b/style.css
@@ -118,6 +118,11 @@ input.text {
     border: 1px solid var(--grisOscuro);
     border-radius: 8px ;
 }
+.cajaDatos input:hover {
+    border:  1px solid var(--grisOscuro);
+    color: var(--blanco);
+    background: var(--rojo);
+}
 
 
 /* footer */
